infrastucture/k8s/api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tca-gateway.com  # Replace with your domain
    http:
      paths:
      - path: /projects/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
